added autorefresh and tweaked layout

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="crestexplorer.js"></script>
 </head>
 <body>
-    <div id="wrapper" class="ui-widget-content ui-corner-all"></div>
+    <div id="wrapper" class="ui-widget-content ui-corner-all">
+        <div id="data"><span></span></div>
+        <span id="autorefresh">autorefresh <input type="checkbox" /></span>
+    </div>
 </body>
 </html>
