add cors over xdr plugin to jquery for IE9 support

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="crestexplorer.css"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-    <script src="http://cachedcommons.org/cache/jquery-cookie/0.0.0/javascripts/jquery-cookie-min.js"></script>
+    <script src="https://raw.github.com/tlianza/ajaxHooks/master/src/ajax/xdr.js"></script>
     <script src="crestexplorer.js"></script>
 </head>
 <body>
