--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="wrapper" class="ui-widget-content ui-corner-all">
         <div id="data"><span></span></div>
         <span class="bottom-menu" id="autorefresh">auto refresh <input type="checkbox" /></span>
-        <a class="bottom-menu" id="login">login</a>
+        <a class="bottom-menu" href="#" id="login">login</a>
     </div>
 </body>
 </html>
