Replace textarea with schema download link

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <div id="content">
       <div id="representationName"></div>
       <div id="data"><span></span></div>
-      <div>Schema</div>
-      <div><textarea id="schema" rows="80" cols="80"></textarea></div>
+      <div><a id="schema">schema</a></div>
       <a class="bottom-menu" href="#" id="login">login</a>
     </div>
   </div>
