Hide elements on error instead of removing them

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="content">
       <div id="representationName"></div>
       <div id="data"><span></span></div>
-      <div><a id="schema">schema</a></div>
+      <div><a id="schema" hidden>schema</a></div>
     </div>
   </div>
 </body>
