Show/hide content rather than contents

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 </head>
 <body>
   <div id="wrapper" class="ui-widget-content ui-corner-all">
-    <div id="content">
+    <div id="content" hidden>
       <div id="representationName"></div>
       <div id="data"><span></span></div>
-      <div><a id="schema" hidden>schema</a></div>
+      <div><a id="schema">schema</a></div>
     </div>
+    <div id="error" hidden></div>
   </div>
 </body>
 </html>
