Add title to schema link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="content" hidden>
       <div id="representationName"></div>
       <div id="data"><span></span></div>
-      <div><a id="schema">schema</a></div>
+      <div><a id="schema" title="Download JSON Schema">schema</a></div>
     </div>
     <div id="error" hidden></div>
   </div>
