--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 <body>
   <div id="wrapper" class="ui-widget-content ui-corner-all">
     <div id="content" hidden>
-      <div id="representationName"></div>
+      <ul id="representations"></ul>
       <div id="data"><span></span></div>
-      <div><a id="schema" title="Download JSON Schema">schema</a></div>
     </div>
     <div id="error" hidden></div>
   </div>
