remove ui-widget-content style

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="crestexplorer.js"></script>
 </head>
 <body>
-  <div id="wrapper" class="ui-widget-content ui-corner-all">
+  <div id="wrapper" class="ui-corner-all">
     <div id="content" hidden>
       <ul id="representations"></ul>
       <div id="data"><span></span></div>
